# shake-extras

./: .gitignore  .travis.yml  AUTHORS.txt  LICENSE.txt  README.md  index.html  params.json  shake-extras.cabal
Development/Shake/: CLI.hs  Imports.hs  Report.hs
examples/: result.txt  tar.hs
extras/: report.html
