name:                shake-extras
version:             0.0
synopsis:            Extra utilities for shake build systems
description:         
  TODO
homepage:            http://thoughtpolice.github.com/shake-extras
bug-reports:         http://github.com/thoughtpolice/shake-extras/issues
license:             BSD3
license-file:        LICENSE.txt
copyright:           Copyright (c) Austin Seipp 2012
author:              Austin Seipp <mad.one@gmail.com>
maintainer:          Austin Seipp <mad.one@gmail.com>
category:            Database
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.0.4,
                     GHC == 7.2.1, GHC == 7.2.2,
                     GHC == 7.4.1

extra-source-files:
  AUTHORS.txt
  README.md

source-repository head
  type: git
  location: https://github.com/thoughtpolice/shake-extras.git

library
  exposed-modules:
    Development.Shake.CLI
  build-depends:
    base       >= 4,
    shake      >= 0.2.6,
    cmdargs    >= 0.9.3

  ghc-options:        -Wall -O2 -funbox-strict-fields
                      -fwarn-tabs
  default-extensions: CPP
  default-language:   Haskell2010

-- test-suite properties
--   hs-source-dirs: tests
--   main-is:        Properties.hs
--   type:           exitcode-stdio-1.0
-- 
--   build-depends:
--     base       >= 4,
--     shake      >= 0.2.6,
--     cmdargs    >= 0.9.3
--     shake-extras
-- 
--   ghc-options:      -Wall -fno-cse -fno-warn-orphans
--                     -threaded -rtsopts
--   default-language: Haskell2010
